--- a/app/src/main/res/layout/fragment_copy_lesson.xml
+++ b/app/src/main/res/layout/fragment_copy_lesson.xml
@@ -16,6 +16,7 @@
 
     <LinearLayout
         android:id="@+id/linLay"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -23,19 +24,21 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_ok"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/spacing_medium"
-            android:text="@string/dialog_button_copy"
-            android:textSize="14sp" />
-
-        <Button
             android:id="@+id/btn_cancel"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/spacing_medium"
             android:text="@string/close"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/btn_ok"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/spacing_medium"
+            android:text="@string/dialog_button_copy"
             android:textSize="14sp" />
     </LinearLayout>
 
@@ -60,7 +63,7 @@
             tools:text="8:00-10:00" />
 
         <TextView
-            android:id="@+id/timeLesson"
+            android:id="@+id/audience"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -74,13 +77,13 @@
 
 
         <androidx.appcompat.widget.AppCompatSpinner
-            android:id="@+id/day"
+            android:id="@+id/educator"
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:layout_alignParentStart="true"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="@dimen/spacing_normal"
-            android:layout_toStartOf="@id/timeLesson"
+            android:layout_toStartOf="@id/audience"
             android:background="@android:color/transparent"
             android:textSize="16sp" />
     </RelativeLayout>
