--- a/app/src/main/res/menu/menu_info.xml
+++ b/app/src/main/res/menu/menu_info.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/btn_edit"
-        android:icon="@drawable/ic_editor"
+        android:id="@+id/btn_info"
+        android:icon="@drawable/ic_info_white"
         android:title=""
         app:showAsAction="always" />
 </menu>
